  03 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> kitchen-1.1.1.ebuild:
  no need for phases

*kitchen-1.1.1 (21 Jan 2013)

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> +kitchen-1.1.1.ebuild,
  +metadata.xml:
  Initial import. Ebuild by me.